# tff-lib

./: .gitignore  README.md  azure-pipelines-unittest.yml  pyproject.toml  requirements.txt  setup.py
data/: test_data.json  test_expected.json  test_input.json
examples/: example.py
tests/: README.md  __test_admit_delta.py  __test_fresnel_bare.py  __test_fresnel_film.py  __test_sub_n_eff.py  test_admit_delta.py  test_c_mat.py  test_char_matrix.py  test_effective_index.py  test_fil_spec.py  test_filmstack.py  test_filspec.py  test_filter.py  test_fresnel_bare.py  test_fresnel_film.py  test_medium.py  test_randstack.py  test_reg_vec.py  test_roc_curve.py  test_substrate.py  test_tff_lib.py  test_thinfilm.py
tests/data/: test_data.json  test_input.json
tests_old/: test_admit_delta.py  test_char_matrix.py  test_fresnel_bare.py  test_fresnel_film.py  test_path_length.py
tff_lib/: __init__.py  __tff_lib_old.py  exceptions.py  films.py  filter.py  medium.cc  medium.cpp  medium.py  substrate.py  tff_lib.py  utils.py
